<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurfaceContainer"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:title="@string/title_settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingLeft="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_medium"
            android:paddingRight="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium">

            <com.google.android.material.card.MaterialCardView
                style="@style/AppTheme.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_medium"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingTop="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium"
                    android:paddingBottom="@dimen/spacing_medium">

                    <TextView
                        style="@style/AppTheme.SectionHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_heartbeat_section" />

                    <TextView
                        style="@style/AppTheme.HelperText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="@string/heartbeat_info" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/AppTheme.TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:hint="@string/label_heartbeat_url"
                        app:helperText="@string/input_url">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_heartbeat_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textUri" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/AppTheme.TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:hint="@string/label_heartbeat_interval"
                        app:helperText="@string/heartbeat_interval_recommendation">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_heartbeat_interval"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/input_heartbeat_enabled"
                        style="@style/AppTheme.SwitchRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="@string/label_heartbeat_enabled" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_heartbeat_test"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_test" />

                        <Button
                            android:id="@+id/btn_heartbeat_save"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_small"
                            android:layout_marginLeft="@dimen/spacing_small"
                            android:text="@string/btn_save" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/backup_section"
                style="@style/AppTheme.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_medium"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingTop="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium"
                    android:paddingBottom="@dimen/spacing_medium">

                    <TextView
                        style="@style/AppTheme.SectionHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_backup_section" />

                    <TextView
                        style="@style/AppTheme.HelperText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="@string/backup_info" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_import"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_import" />

                        <Button
                            android:id="@+id/btn_export"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_small"
                            android:layout_marginLeft="@dimen/spacing_small"
                            android:text="@string/btn_export" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
